# crypto-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
mlkem/: Cargo.toml  LICENSE  README.md
mlkem/benches/: bench.rs
mlkem/examples/: kat_tests.rs
mlkem/src/: lib.rs
